--- a/TP-1-420-216-FX/TP-1-420-216-FX.csproj
+++ b/TP-1-420-216-FX/TP-1-420-216-FX.csproj
@@ -46,6 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormFicheJoueur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormFicheJoueur.Designer.cs">
+      <DependentUpon>FormFicheJoueur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Joueur.cs" />
+    <Compile Include="Participant.cs" />
     <Compile Include="Utilitaire.cs" />
     <Compile Include="Equipe.cs" />
     <Compile Include="Form1.cs">
@@ -60,6 +68,9 @@
     <Compile Include="StatsJoueur.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormFicheJoueur.resx">
+      <DependentUpon>FormFicheJoueur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
