--- a/TP-1-420-216-FX/TP-1-420-216-FX.csproj
+++ b/TP-1-420-216-FX/TP-1-420-216-FX.csproj
@@ -56,18 +56,18 @@
     <Compile Include="Participant.cs" />
     <Compile Include="Utilitaire.cs" />
     <Compile Include="Equipe.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormPoolHockeyLnh.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormPoolHockeyLnh.Designer.cs">
+      <DependentUpon>FormPoolHockeyLnh.cs</DependentUpon>
     </Compile>
     <Compile Include="PositionHockey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatsJoueur.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormPoolHockeyLnh.resx">
+      <DependentUpon>FormPoolHockeyLnh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormFicheJoueur.resx">
       <DependentUpon>FormFicheJoueur.cs</DependentUpon>
