--- a/TP-1-420-216-FX/TP-1-420-216-FX.csproj
+++ b/TP-1-420-216-FX/TP-1-420-216-FX.csproj
@@ -53,10 +53,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPoolHockeyLnh.cs" />
+    <Compile Include="PoolHockeyLnh.cs" />
     <Compile Include="PositionHockey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatsJoueur.cs" />
+    <Compile Include="Utilitaire.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
