Modif de la classe PoolHockeyLNH et transfere de methode vers celle ci pour le fonctionnement du programme

--- a/TP-1-420-216-FX/TP-1-420-216-FX.csproj
+++ b/TP-1-420-216-FX/TP-1-420-216-FX.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Joueur.cs" />
     <Compile Include="Participant.cs" />
+    <Compile Include="PoolHockeyLnh.cs" />
     <Compile Include="Utilitaire.cs" />
     <Compile Include="Equipe.cs" />
     <Compile Include="FormPoolHockeyLnh.cs">
