--- a/TP-1-420-216-FX/TP-1-420-216-FX.csproj
+++ b/TP-1-420-216-FX/TP-1-420-216-FX.csproj
@@ -46,14 +46,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormFicheJoueur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormFicheJoueur.Designer.cs">
+      <DependentUpon>FormFicheJoueur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPoolHockeyLnh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPoolHockeyLnh.Designer.cs">
+      <DependentUpon>FormPoolHockeyLnh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Joueur.cs" />
     <Compile Include="Participant.cs" />
+    <Compile Include="PoolHockeyLnh.cs" />
     <Compile Include="Utilitaire.cs" />
     <Compile Include="Equipe.cs" />
     <Compile Include="PositionHockey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatsJoueur.cs" />
+    <EmbeddedResource Include="FormFicheJoueur.resx">
+      <DependentUpon>FormFicheJoueur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPoolHockeyLnh.resx">
+      <DependentUpon>FormPoolHockeyLnh.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
